fixed issue where invisible streaksLoginSuggestionPopup container blocked start-stop and end-session btns by modulating z-index

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -358,7 +358,7 @@ body[dinkle-doink-setting=space] .dinkle-doink-mode .caption [dinkle-doink=space
 
     z-index: 15;
 
-    /* border: 3px solid rgb(230, 0, 220); */
+    border: 3px solid rgb(230, 0, 220);
     height: auto; /* Adjust height as needed */
     /* margin: 0; */
     box-sizing: border-box; /* Ensure padding and border are included in the element's width and height */
@@ -1500,7 +1500,7 @@ header {
     display: flex;
     opacity: 0;
     transition: opacity 0.15s ease-in-out;
-    z-index: 35;
+    z-index: 0; /* needs to be at 0 when invisible so it doesn't cover up start and end-session btns */
 }
 
 #streaksLoginSuggestionPopup::after {
